@@ -1656,5 +1656,12 @@ int main()
 
 int yywrap( void )
 {
+	{
+		/* Silly impossible function call to stop warning of unused functions */
+		if ( 0 ) {
+			yyunput(0, "");
+		}
+	}
+
     return 1;
 }
