@@ -43,5 +43,12 @@ const char * get_token( void )
 
 int yywrap( void )
 {
+	{
+		/* Silly impossible function call to stop warning of unused functions */
+		if ( 0 ) {
+			yyunput(0, "");
+		}
+	}
+
     return 1;
 }
