@@ -114,5 +114,12 @@ L                       [a-zA-Z_]
 %%
 
 int ada_wrap ( void ) {
+	{
+		/* Silly impossible function call to stop warning of unused functions */
+		if ( 0 ) {
+			yyunput(0, "");
+		}
+	}
+
 	return 1;
 }
